Repair time in constructor
Updated code in function getDate() bugfix time

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ body {
   background-image: url("https://cdn4.iconfinder.com/data/icons/6x16-free-application-icons/16/Apply.png");
   background-repeat: no-repeat;
   background-position: right 1rem center;
+  color: #212121;
 }
 
 /* components/table */
