--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -66,7 +66,7 @@
     .is-error {
       &::placeholder {
         font-size: 12px;
-        color: red;
+        color: $red;
       }
     }
 
@@ -74,6 +74,7 @@
       background-image: url('https://cdn4.iconfinder.com/data/icons/6x16-free-application-icons/16/Apply.png');
       background-repeat: no-repeat;
       background-position: right 1rem center;
+      color: $colorPrimaryFont;
     }
   }
 }
